# TalkCouch

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  main.py  pyproject.toml
Docs/: ClientRequest.txt  todo.txt
backend/: Dockerfile  README.Docker.md  README.md  main.py  pyproject.toml
backend/Docs/: plan.txt  routers_plan.txt  todo.txt
backend/reference/: app.py  llm_error_handling.py  test.py
backend/src/api/v1/: evaluation.py  questions.py
backend/src/core/: llm.py  speech.py
backend/src/services/v1/: jam.py  llm.py  summary.py
backend/src/services/v2/: evaluation_service.py  llm_service.py  media_service.py  question_service.py
backend/tests/: test_evaluation_service.py
backend/ui/: jam.py  main.py  summary.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.tsx  Home.tsx
frontend/src/components/: app-sidebar.tsx
frontend/src/lib/: history.ts
frontend/src/pages/: HistoryPage.tsx  JamPage.tsx  JumblePage.tsx  ScenarioPage.tsx  SpeechPage.tsx  SummaryPage.tsx
frontend/src/services/: api.ts
reference/: audio_duration_check.py  gemini.py  jumble.py  text.py
src/: jam.py  jumble.py  llm.py  scenario.py  speech.py  summary.py
ui/: jam.py  jumble.py  scenario.py  speech.py  summary.py
web/: index.html  script.js  style.css
